--- a/balls-game-input.html
+++ b/balls-game-input.html
@@ -56,6 +56,78 @@
 		color: 'red'
 	}
 
+	class Ball {
+		constructor(x, y, radius, color, speedX, speedY) {
+			this.x = x;
+			this.y = y;
+			this.radius = radius;
+			this.color = color;
+			this.speedX = speedX;
+			this.speedY = speedY;
+		}
+
+		// Nearly the same as the old drawFilledCircle function
+		draw(ctx) {
+			// save the context
+			ctx.save();
+	  
+			// translate the coordinate system, draw relative to it
+			ctx.translate(this.x, this.y);
+			
+			ctx.fillStyle = this.color;
+			
+			ctx.beginPath();
+			ctx.arc(0, 0, this.radius, 0, 2*Math.PI);
+			ctx.fill();
+			
+			// GOOD practice: restore the context
+			ctx.restore();
+		}
+
+		move() {
+			this.x += this.speedX;
+			this.y += this.speedY;
+		}
+	}
+
+	function createBalls2(n) {
+		// empty array of balls
+		let ballArray = [];
+	  
+	  // create n balls
+	  for (let i=0; i < n; i++) {
+		let x = w/2;
+		let y = h/2;
+		let radius = 5 + 30 * Math.random(); // between 5 and 35
+		let speedX = -5 + 10 * Math.random(); // between -5 and 5
+		let speedY = -5 + 10 * Math.random(); // between -5 and 5
+		let color = getRandomColor();
+
+		// create the new ball b
+		let b = new Ball(x, y, radius, color, speedX, speedY);
+		// add ball b to the array
+		ballArray.push(b);
+	  }
+	  // returns array of balls
+	  return ballArray;
+	}
+
+	function drawAllBalls2(ballArray) {
+		ballArray.forEach(function(b) {
+			b.draw(ctx);
+		});
+	}
+
+	function moveAllBalls2(ballArray) {
+		balls.forEach(function(b, index) {
+			b.move();
+
+			testCollisionBallWithWalls(b);
+
+			testCollisionWithPlayer(b, index);
+		});
+	}
+
 	window.onload = function init() {
 	  // called after the page has been loaded
 	  canvas = document.querySelector("#myCanvas");
